fixed header and gallery z index on mobile

--- a/src/styles/gallery.css
+++ b/src/styles/gallery.css
@@ -52,6 +52,7 @@
 
 @media only screen and (max-width: 500px) {
   .grid-wrapper {
+    z-index: -100;
     grid-gap: 15px;
     padding: 20px;
     display: grid;
