--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -206,6 +206,7 @@
 /***********LESS THAN 610PX DO THIS*****************/
 @media only screen and (max-width: 610px) {
   #header {
+    z-index: 100;
     display: flex;
     flex-direction: column;
     background-color: #3fb0ac;
